[gd_scene load_steps=3 format=3 uid="uid://o0tdgoxknh11"]

[ext_resource type="Script" uid="uid://dchhr226mql2u" path="res://scripts/buffs/buff.gd" id="1_0xkwd"]
[ext_resource type="Texture2D" uid="uid://beaydcwcdyt64" path="res://resources/buffs/mining/mining.png" id="1_uarqe"]

[node name="BuffContainer" type="VBoxContainer" groups=["ui_cursor"]]
script = ExtResource("1_0xkwd")

[node name="BuffIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_uarqe")

[node name="BuffLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "3m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuffDurationTimer" type="Timer" parent="."]
unique_name_in_owner = true
